fixed layout issues on result page and added insect descriptions

--- a/src/components/Bug/Bug.css
+++ b/src/components/Bug/Bug.css
@@ -130,13 +130,3 @@
   100%{ transform: rotate(0deg) translateX(150px); }
 }
 
-img {
-  position: absolute;
-  width: 40px;
-  height: auto;
-  z-index: 1;
-}
-
-img:hover{
-  cursor: pointer;
-}
