--- a/src/components/Play/Play.css
+++ b/src/components/Play/Play.css
@@ -11,3 +11,14 @@
     order: 1;
   }
 }
+
+.Play img {
+  position: absolute;
+  width: 40px;
+  height: auto;
+  z-index: 1;
+}
+
+.Play img:hover{
+  cursor: pointer;
+}
