--- a/src/pages/Start/Start.css
+++ b/src/pages/Start/Start.css
@@ -3,6 +3,9 @@
   text-align: center;
   background-color: white;
   height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .Start a {
@@ -11,4 +14,14 @@
   border: 1px solid black;
   padding: 5px;
   background-color: lightgray;
+  width: 200px;
+  margin: 0 auto;
+}
+
+.Start h3{
+  font-size: 2em;
+}
+
+.Start p{
+  padding: 20px;
 }
